test/log/store/vsstcb7_v_i32_m.txt
vsstcb7_v_i32_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb7_v_i32_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb7_v_i32_m.c:37:79: error: expected declaration specifiers or '...' before ')' token
   37 | void vsstcb7_v_i32_m_golden(uint64_t *mask,int32_t *base,int32_t value[7][16],) {
      |                                                                               ^
vsstcb7_v_i32_m.c: In function 'main':
vsstcb7_v_i32_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsstcb7_v_i32_m.c:63:5: warning: implicit declaration of function 'vsstcb7_v_i32_m_golden'; did you mean 'vsstcb7_v_i32_m'? [-Wimplicit-function-declaration]
   63 |     vsstcb7_v_i32_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~
      |     vsstcb7_v_i32_m
vsstcb7_v_i32_m.c:63:56: error: 'exp_result' undeclared (first use in this function)
   63 |     vsstcb7_v_i32_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |                                                        ^~~~~~~~~~
vsstcb7_v_i32_m.c:63:56: note: each undeclared identifier is reported only once for each function it appears in
vsstcb7_v_i32_m.c:66:31: error: incompatible type for argument 3 of 'vsstcb7_v_i32_m'
   66 |     vsstcb7_v_i32_m(mask,base,value);
      |                               ^~~~~
      |                               |
      |                               int32x16x7_t
In file included from vsstcb7_v_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:895:1: note: expected 'int32x16_t' but argument is of type 'int32x16x7_t'
  895 | __RUGRATS_SCATTER_STORE (i, int, 32, 16)
      | ^~~~~~~~~~~~~~~~~~~~~~~
vsstcb7_v_i32_m.c:66:5: error: too few arguments to function 'vsstcb7_v_i32_m'
   66 |     vsstcb7_v_i32_m(mask,base,value);
      |     ^~~~~~~~~~~~~~~
In file included from vsstcb7_v_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:895:1: note: declared here
  895 | __RUGRATS_SCATTER_STORE (i, int, 32, 16)
      | ^~~~~~~~~~~~~~~~~~~~~~~
vsstcb7_v_i32_m.c:69:9: error: 'i' undeclared (first use in this function)
   69 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb7_v_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb7_v_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb7_v_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb7_v_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed